--- a/index.html
+++ b/index.html
@@ -42,35 +42,31 @@
 							</ul>
 						</div>
 					</nav>
-				</div>
+				</div>	
 			</div>
 			<!-- bloc-0 END -->
-		</header>
-		<main>
-			<section>
-				<!-- Principal conteneur -->
-				<div class="page-container">
-				
-					<!-- bloc-1-presentation -->
-					<article>
-						<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
-							<div class="container bloc-lg">
-								<div class="row tight-width-whitespace">
-									<div class="col-sm-12">
-										<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
-										<h1 class="text-center hero-bloc-text tc-white">
-											Agence La Panthère
-										</h1>
-										<div class="text-center">
-											<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
-										</div>
-									</div>
-								</div>
+			<!-- bloc-1-presentation -->
+			<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+				<div class="container bloc-lg">
+					<div class="row tight-width-whitespace">
+						<div class="col-sm-12">
+							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo Agence La Panthère Lyon">
+							<h1 class="text-center hero-bloc-text tc-white">
+								Agence La Panthère
+							</h1>
+							<div class="text-center">
+								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 							</div>
 						</div>
-						<!-- bloc-1-presentation END -->
-					</article>
+					</div>
+				</div>
+			</div>
+			<!-- bloc-1-presentation END -->
 			
+		</header>
+		<main>
+				<!-- Principal conteneur -->
+				<div class="page-container">
 					<!-- bloc-2-services -->
 					<article>
 						<div class="bloc bgc-white l-bloc" id="bloc-2-services">
@@ -170,7 +166,7 @@
 								</div>
 								<div class="row tight-width-whitespace portfolio-row">
 									<div class="col-sm-6">
-										<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
+										<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" ></a>
 										<h3 class="mg-md text-center">
 											Refonte d'un site web pour un journal local
 										</h3>
@@ -179,7 +175,7 @@
 										</p>
 									</div>
 									<div class="col-sm-6">
-										<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
+										<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="web design logo agence web meilleure agence, Création d'un site web pour photographes" ></a>
 										<h3 class="mg-md text-center">
 											Création d'un site web pour photographes
 										</h3>
@@ -190,7 +186,7 @@
 								</div>
 								<div class="row tight-width-whitespace portfolio-row">
 									<div class="col-sm-6">
-										<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+										<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="web design logo agence web meilleure agence, Création d'un site web pour voyageur"></a>
 										<h3 class="mg-md text-center">
 											Création d'un site internet pour un voyageur
 										</h3>
@@ -199,7 +195,7 @@
 										</p>
 									</div>
 									<div class="col-sm-6">
-										<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
+										<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"></a>
 										<h3 class="mg-md text-center">
 											Conception d'un site pour une agence de mariage
 										</h3>
@@ -233,8 +229,6 @@
 
 				</div>
 				<!-- Principal conteneur END -->
-			</section>
-
 		</main>
 		<footer>
 			<!-- Footer - bloc-8 -->
