--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
 								</div>
 								<div class="row tight-width-whitespace portfolio-row">
 									<div class="col-sm-6">
-										<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" ></a>
+										<a class="portfolio-img-a" href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+											<img class="portfolio-img"	src="img/1.jpg" alt="Refonte site web journal" class="img-responsive portfolio-thumb" ></a>
 										<h3 class="mg-md text-center">
 											Refonte d'un site web pour un journal local
 										</h3>
@@ -174,7 +175,8 @@
 										</p>
 									</div>
 									<div class="col-sm-6">
-										<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="web design logo agence web meilleure agence, Création d'un site web pour photographes" ></a>
+										<a class="portfolio-img-a" href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+											<img class="portfolio-img"	src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" ></a>
 										<h3 class="mg-md text-center">
 											Création d'un site web pour photographes
 										</h3>
@@ -185,7 +187,8 @@
 								</div>
 								<div class="row tight-width-whitespace portfolio-row">
 									<div class="col-sm-6">
-										<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="web design logo agence web meilleure agence, Création d'un site web pour voyageur"></a>
+										<a class="portfolio-img-a" href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+											<img class="portfolio-img" src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"></a>
 										<h3 class="mg-md text-center">
 											Création d'un site internet pour un voyageur
 										</h3>
@@ -194,7 +197,8 @@
 										</p>
 									</div>
 									<div class="col-sm-6">
-										<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="web design logo agence web meilleure agence, Création d'un site web pour agence de mariage"></a>
+										<a class="portfolio-img-a" href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+											<img class="portfolio-img" src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage"></a>
 										<h3 class="mg-md text-center">
 											Conception d'un site pour une agence de mariage
 										</h3>
