--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 							<h1 class="text-center hero-bloc-text tc-white">
 								Agence La Panthère
 							</h1>
-							<div class="text-center">
+							<div class="text-center fix-position">
 								<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 							</div>
 						</div>
@@ -221,7 +221,7 @@
 										Prêt pour redonner vie à votre projet ? <br>
 										Contactez notre équipe !
 									</h2>
-									<div class="col-sm-12 text-center">
+									<div class="col-sm-12 text-center fix-position">
 										<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 									</div>
 								</div>
