--- a/index.html
+++ b/index.html
@@ -165,44 +165,44 @@
 								</div>
 								<div class="row tight-width-whitespace portfolio-row">
 									<div class="col-sm-6">
-										<a class="portfolio-img-a" href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-											<img class="portfolio-img"	src="img/1.jpg" alt="Refonte site web journal" class="img-responsive portfolio-thumb" ></a>
-										<h3 class="mg-md text-center">
+										<a class="portfolio-img-a" href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+											<img class="portfolio-img"	src="img/1.webp" alt="Refonte site web journal" class="img-responsive portfolio-thumb" ></a>
+										<h3 class="mg-md text-center size-18">
 											Refonte d'un site web pour un journal local
 										</h3>
-										<p class="text-center">
+										<p class="text-center size-16">
 											Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 										</p>
 									</div>
 									<div class="col-sm-6">
-										<a class="portfolio-img-a" href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-											<img class="portfolio-img"	src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" ></a>
-										<h3 class="mg-md text-center">
+										<a class="portfolio-img-a" href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+											<img class="portfolio-img"	src="img/2.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" ></a>
+										<h3 class="mg-md text-center size-18">
 											Création d'un site web pour photographes
 										</h3>
-										<p class="text-center">
+										<p class="text-center size-16">
 											Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 										</p>
 									</div>
 								</div>
 								<div class="row tight-width-whitespace portfolio-row">
 									<div class="col-sm-6">
-										<a class="portfolio-img-a" href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-											<img class="portfolio-img" src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"></a>
-										<h3 class="mg-md text-center">
+										<a class="portfolio-img-a" href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+											<img class="portfolio-img" src="img/3.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"></a>
+										<h3 class="mg-md text-center size-18">
 											Création d'un site internet pour un voyageur
 										</h3>
-										<p class="text-center">
+										<p class="text-center size-16">
 											Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 										</p>
 									</div>
 									<div class="col-sm-6">
-										<a class="portfolio-img-a" href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-											<img class="portfolio-img" src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage"></a>
-										<h3 class="mg-md text-center">
+										<a class="portfolio-img-a" href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+											<img class="portfolio-img" src="img/4.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage"></a>
+										<h3 class="mg-md text-center size-18">
 											Conception d'un site pour une agence de mariage
 										</h3>
-										<p class="text-center">
+										<p class="text-center size-16">
 											Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 										</p>
 									</div>
