--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<article>
 						<div class="bloc bgc-white l-bloc" id="bloc-2-services">
 							<div class="container bloc-md">
-								<div class="row">
+								<div class="row fix-div-margin">
 									<div class="col-sm-12 text-center">
 										<h2 class="size-22">
 											L'agence La Panthère est une agence de web design qui aide les entreprises à devenir 
@@ -155,9 +155,9 @@
 					<article>
 						<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 							<div class="container bloc-lg">
-								<div class="row">
+								<div class="row  fix-div-margin">
 									<div class="col-sm-12 text-center">
-										<h2 class=" size-22">
+										<h2 class="size-22">
 											Nous travaillons avec beaucoup de clients,
 											voici nos réalisations.
 										</h2>
