--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/formHandler.js"></script>
+
     <title>Page de Contact - Agence webdesign La Panthère, Lyon</title>
 
     
@@ -165,6 +161,10 @@
 			</div>
 			<!-- Footer - bloc-8 END -->
 		</footer>
-
+		<script src="./js/jquery-2.1.0.min.js"></script>
+		<script src="./js/bootstrap.min.js"></script>
+		<script src="./js/blocs.js"></script>
+		<script src="./js/jqBootstrapValidation.js"></script>
+		<script src="./js/formHandler.js"></script>
 	</body>
 </html>
