--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
 						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo Agence La Panthère Lyon">
+							<img src="img/logo.png" class="center-block image-resize-mode" alt="Logo Agence La Panthère Lyon">
 							<h1 class="text-center hero-bloc-text tc-white">
 								Agence La Panthère
 							</h1>
