--- a/index.html
+++ b/index.html
@@ -137,12 +137,13 @@
 						<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 							<div class="container bloc-lg">
 								<div class="row tight-width-whitespace black-background">
-									<div class="col-sm-12">
+									<div class="col-sm-12 z-index-100">
 										<h2 class="mg-md text-center tc-white">
 											Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 										</h2>
 										<p class="text-center white size-18">
-											Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+											Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. 
+											<br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 										</p>
 									</div>
 								</div>
@@ -216,7 +217,7 @@
 					<article>
 						<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture" id="bloc-5-cta">
 							<div class="container bloc-lg">
-								<div class="row">
+								<div class="row z-index-100">
 									<h2 class="mg-md text-center tc-white size-18">
 										Prêt pour redonner vie à votre projet ? <br>
 										Contactez notre équipe !
@@ -239,7 +240,7 @@
 				<div class="container bloc-sm">
 					<div class="row">
 						<div class="col-sm-12">
-							<p class="text-center white ">
+							<p class="text-center white size-16">
 								Agence La Panthère - Agence web basée à Lyon.
 							</p>
 							<div class="row row-no-gutters social fix">
