--- a/index.html
+++ b/index.html
@@ -246,22 +246,22 @@
 							<div class="row row-no-gutters social fix">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://twitter.com/"><span class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="https://twitter.com/" aria-label="Vous redirige vers le compte Twitter de l'Agence La Panthère"><span class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="https://www.facebook.com/" aria-label="Vous redirige vers le compte Facebook de l'Agence La Panthère"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://dribbble.com/"><span class="fa fa-dribbble icon-md"></span></a>
+										<a class="social" href="https://dribbble.com/" aria-label="Vous redirige vers le compte Dribble de l'Agence La Panthère"><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
+										<a class="social" href="https://www.instagram.com/" aria-label="Vous redirige vers le compte Instagram de l'Agence La Panthère"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
 							</div>
@@ -271,7 +271,7 @@
 			</div>
 			<!-- Footer - bloc-8 END -->
 		</footer>
-		<script src="./js/jquery-2.1.0.min.js"></script>
+		<script src="./js/jquery-2.1.0.js"></script>
 		<script src="./js/bootstrap.min.js"></script>
 		<script src="./js/blocs.js"></script>
 		<script src="./js/jquery.touchSwipe.js" defer></script>
