img webp fix header position

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<div class="container bloc-sm">
 					<nav class="navbar row">
 						<div class="navbar-header">
-							<a class="navbar-brand" href="index.html"><img class="img-logo-header" src="img/agence-la-panthere-monochrome.png" alt="Logo Agence La Panthère Lyon"></a>
+							<a class="navbar-brand" href="index.html"><img class="img-logo-header" src="img/agence-la-panthere-monochrome.webp" alt="Logo Agence La Panthère Lyon"></a>
 							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 								<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 							</button>
@@ -49,8 +49,8 @@
 			<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 				<div class="container bloc-lg">
 					<div class="row tight-width-whitespace">
-						<div class="col-sm-12">
-							<img src="img/logo.png" class="center-block image-resize-mode" alt="Logo Agence La Panthère Lyon">
+						<div class="col-sm-12  z-index-100">
+							<img src="img/logo.webp" class="center-block image-resize-mode" alt="Logo Agence La Panthère Lyon">
 							<h1 class="text-center hero-bloc-text tc-white">
 								Agence La Panthère
 							</h1>
