--- a/contact.html
+++ b/contact.html
@@ -59,11 +59,11 @@
 				<div class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 					<div class="container bloc-lg">
 						<div class="row">
-							<div class="col-sm-12">
-								<h1 class="text-center hero-bloc-text tc-white">
+							<div class="col-sm-12 z-index-100">
+								<h1 class="text-center hero-bloc-text tc-white size-36">
 									Parlons web design !
 								</h1>
-								<p class="text-center mg-lg tc-white tight-width-whitespace">
+								<p class="text-center mg-lg tc-white tight-width-whitespace size-18">
 									Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 									Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 								</p>
