--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 			<!-- Footer - bloc-8 END -->
 		</footer>
 		<script src="./js/jquery-2.1.0.js"></script>
-		<script src="./js/bootstrap.min.js"></script>
+		<script src="./js/bootstrap.min.js" defer></script>
 		<script src="./js/blocs.js"></script>
 		<script src="./js/jquery.touchSwipe.js" defer></script>
 		<script src="./js/gmaps.min.js"></script>
