--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 								<div class="row tight-width-whitespace portfolio-row">
 									<div class="col-sm-6">
 										<a class="portfolio-img-a" href="#" data-lightbox="img/1.webp" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-											<img class="portfolio-img"	src="img/1.webp" alt="Refonte site web journal" class="img-responsive portfolio-thumb" ></a>
+											<img class="portfolio-img img-responsive portfolio-thumb"	src="img/1.webp" alt="Refonte site web journal"></a>
 										<h3 class="mg-md text-center size-18">
 											Refonte d'un site web pour un journal local
 										</h3>
@@ -177,7 +177,7 @@
 									</div>
 									<div class="col-sm-6">
 										<a class="portfolio-img-a" href="#" data-lightbox="img/2.webp" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
-											<img class="portfolio-img"	src="img/2.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" ></a>
+											<img class="portfolio-img img-responsive portfolio-thumb"	src="img/2.webp" alt="Création d'un site web pour photographes"></a>
 										<h3 class="mg-md text-center size-18">
 											Création d'un site web pour photographes
 										</h3>
@@ -189,7 +189,7 @@
 								<div class="row tight-width-whitespace portfolio-row">
 									<div class="col-sm-6">
 										<a class="portfolio-img-a" href="#" data-lightbox="img/3.webp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
-											<img class="portfolio-img" src="img/3.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"></a>
+											<img class="portfolio-img img-responsive portfolio-thumb" src="img/3.webp" alt="Création d'un site web pour voyageur"></a>
 										<h3 class="mg-md text-center size-18">
 											Création d'un site internet pour un voyageur
 										</h3>
@@ -199,7 +199,7 @@
 									</div>
 									<div class="col-sm-6">
 										<a class="portfolio-img-a" href="#" data-lightbox="img/4.webp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
-											<img class="portfolio-img" src="img/4.webp" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage"></a>
+											<img class="portfolio-img img-responsive portfolio-thumb" src="img/4.webp" alt="Création d'un site web pour agence de mariage"></a>
 										<h3 class="mg-md text-center size-18">
 											Conception d'un site pour une agence de mariage
 										</h3>
